// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Suggester does not render results onSearch without waiting for debounce 1`] = `
<AutoComplete
  choiceTransitionName="zoom"
  filterOption={false}
  onSearch={[Function]}
  optionLabelProp="value"
  prefixCls="ant-select"
  showSearch={false}
  transitionName="slide-up"
/>
`;

exports[`Suggester renders empty if request fails 1`] = `
<AutoComplete
  choiceTransitionName="zoom"
  filterOption={false}
  onSearch={[Function]}
  optionLabelProp="value"
  prefixCls="ant-select"
  showSearch={false}
  transitionName="slide-up"
/>
`;

exports[`Suggester renders results onSearch 1`] = `
<AutoComplete
  choiceTransitionName="zoom"
  filterOption={false}
  onSearch={[Function]}
  optionLabelProp="value"
  prefixCls="ant-select"
  showSearch={false}
  transitionName="slide-up"
>
  <Option
    key="Result 1"
    value="Result 1"
  >
    Result 1
  </Option>
  <Option
    key="Result 2"
    value="Result 2"
  >
    Result 2
  </Option>
</AutoComplete>
`;

exports[`Suggester renders results with custom completion value 1`] = `
<AutoComplete
  choiceTransitionName="zoom"
  filterOption={false}
  onSearch={[Function]}
  optionLabelProp="value"
  prefixCls="ant-select"
  showSearch={false}
  transitionName="slide-up"
>
  <Option
    key="Result 1 - Extra 1"
    value="Result 1 - Extra 1"
  >
    Result 1 - Extra 1
  </Option>
  <Option
    key="Result 2 - Extra 2"
    value="Result 2 - Extra 2"
  >
    Result 2 - Extra 2
  </Option>
</AutoComplete>
`;

exports[`Suggester renders results with custom result template 1`] = `
<AutoComplete
  choiceTransitionName="zoom"
  filterOption={false}
  onSearch={[Function]}
  optionLabelProp="value"
  prefixCls="ant-select"
  showSearch={false}
  transitionName="slide-up"
>
  <Option
    key="Result 1"
    value="Result 1"
  >
    <span>
      Result 1
       
      <em>
        Extra 1
      </em>
    </span>
  </Option>
  <Option
    key="Result 2"
    value="Result 2"
  >
    <span>
      Result 2
       
      <em>
        Extra 2
      </em>
    </span>
  </Option>
</AutoComplete>
`;
